--- a/doc/smart_ptr/intrusive_ptr.adoc
+++ b/doc/smart_ptr/intrusive_ptr.adoc
@@ -41,12 +41,10 @@ As a general rule, if it isn't obvious whether `intrusive_ptr` better fits your 
 `intrusive_ptr` is defined in `<boost/smart_ptr/intrusive_ptr.hpp>`.
 
 ```
-namespace boost
-{
+namespace boost {
 
-template<class T> class intrusive_ptr
-{
-public:
+  template<class T> class intrusive_ptr {
+  public:
 
     typedef T element_type;
 
@@ -71,50 +69,49 @@ public:
     T * get() const noexcept;
     T * detach() noexcept;
 
-    operator unspecified-bool-type() const noexcept;
+    explicit operator bool () const noexcept;
 
     void swap(intrusive_ptr & b) noexept;
-};
+  };
 
-template<class T, class U>
-bool operator==(intrusive_ptr<T> const & a, intrusive_ptr<U> const & b) noexcept;
+  template<class T, class U>
+    bool operator==(intrusive_ptr<T> const & a, intrusive_ptr<U> const & b) noexcept;
 
-template<class T, class U>
-bool operator!=(intrusive_ptr<T> const & a, intrusive_ptr<U> const & b) noexcept;
+  template<class T, class U>
+    bool operator!=(intrusive_ptr<T> const & a, intrusive_ptr<U> const & b) noexcept;
 
-template<class T, class U>
-bool operator==(intrusive_ptr<T> const & a, U * b) noexcept;
+  template<class T, class U>
+    bool operator==(intrusive_ptr<T> const & a, U * b) noexcept;
 
-template<class T, class U>
-bool operator!=(intrusive_ptr<T> const & a, U * b) noexcept;
+  template<class T, class U>
+    bool operator!=(intrusive_ptr<T> const & a, U * b) noexcept;
 
-template<class T, class U>
-bool operator==(T * a, intrusive_ptr<U> const & b) noexcept;
+  template<class T, class U>
+    bool operator==(T * a, intrusive_ptr<U> const & b) noexcept;
 
-template<class T, class U>
-bool operator!=(T * a, intrusive_ptr<U> const & b) noexcept;
+  template<class T, class U>
+    bool operator!=(T * a, intrusive_ptr<U> const & b) noexcept;
 
-template<class T, class U>
-bool operator<(intrusive_ptr<T> const & a, intrusive_ptr<U> const & b) noexcept;
+  template<class T, class U>
+    bool operator<(intrusive_ptr<T> const & a, intrusive_ptr<U> const & b) noexcept;
 
-template<class T> void swap(intrusive_ptr<T> & a, intrusive_ptr<T> & b) noexcept;
+  template<class T> void swap(intrusive_ptr<T> & a, intrusive_ptr<T> & b) noexcept;
 
-template<class T> T * get_pointer(intrusive_ptr<T> const & p) noexcept;
+  template<class T> T * get_pointer(intrusive_ptr<T> const & p) noexcept;
 
-template<class T, class U>
-intrusive_ptr<T> static_pointer_cast(intrusive_ptr<U> const & r) noexcept;
+  template<class T, class U>
+    intrusive_ptr<T> static_pointer_cast(intrusive_ptr<U> const & r) noexcept;
 
-template<class T, class U>
-intrusive_ptr<T> const_pointer_cast(intrusive_ptr<U> const & r) noexcept;
+  template<class T, class U>
+    intrusive_ptr<T> const_pointer_cast(intrusive_ptr<U> const & r) noexcept;
 
-template<class T, class U>
-intrusive_ptr<T> dynamic_pointer_cast(intrusive_ptr<U> const & r) noexcept;
+  template<class T, class U>
+    intrusive_ptr<T> dynamic_pointer_cast(intrusive_ptr<U> const & r) noexcept;
 
-template<class E, class T, class Y>
-std::basic_ostream<E, T> & operator<< (std::basic_ostream<E, T> & os,
-    intrusive_ptr<Y> const & p);
-
-} // namespace boost
+  template<class E, class T, class Y>
+    std::basic_ostream<E, T> & operator<< (std::basic_ostream<E, T> & os,
+      intrusive_ptr<Y> const & p);
+}
 ```
 
 ## Members
@@ -275,17 +272,18 @@ the implications are thoroughly understood.
 ### conversions
 
 ```
-operator unspecified-bool-type () const noexcept;
+explicit operator bool () const noexcept;
 ```
 
 [none]
 * {blank}
 +
-Returns:: an unspecified value that, when used in boolean contexts, is equivalent to `get() != 0`.
+Returns:: `get() != 0`.
 
 NOTE: This conversion operator allows `intrusive_ptr` objects to be used in boolean contexts,
-like `if (p && p\->valid()) {}`. The actual target type is typically a pointer to a member function,
-avoiding many of the implicit conversion pitfalls.
+like `if (p && p\->valid()) {}`.
+
+NOTE: On C++03 compilers, the return value is of an unspecified type.
 
 ### swap
 
@@ -304,7 +302,7 @@ Effects:: Exchanges the contents of the two smart pointers.
 
 ```
 template<class T, class U>
-bool operator==(intrusive_ptr<T> const & a, intrusive_ptr<U> const & b) noexcept;
+  bool operator==(intrusive_ptr<T> const & a, intrusive_ptr<U> const & b) noexcept;
 ```
 
 [none]
@@ -314,7 +312,7 @@ Returns:: `a.get() == b.get()`.
 
 ```
 template<class T, class U>
-bool operator!=(intrusive_ptr<T> const & a, intrusive_ptr<U> const & b) noexcept;
+  bool operator!=(intrusive_ptr<T> const & a, intrusive_ptr<U> const & b) noexcept;
 ```
 
 [none]
@@ -324,7 +322,7 @@ Returns:: `a.get() != b.get()`.
 
 ```
 template<class T, class U>
-bool operator==(intrusive_ptr<T> const & a, U * b) noexcept;
+  bool operator==(intrusive_ptr<T> const & a, U * b) noexcept;
 ```
 
 [none]
@@ -334,7 +332,7 @@ Returns:: `a.get() == b`.
 
 ```
 template<class T, class U>
-bool operator!=(intrusive_ptr<T> const & a, U * b) noexcept;
+  bool operator!=(intrusive_ptr<T> const & a, U * b) noexcept;
 ```
 
 [none]
@@ -344,7 +342,7 @@ Returns:: `a.get() != b`.
 
 ```
 template<class T, class U>
-bool operator==(T * a, intrusive_ptr<U> const & b) noexcept;
+  bool operator==(T * a, intrusive_ptr<U> const & b) noexcept;
 ```
 
 [none]
@@ -354,7 +352,7 @@ Returns:: `a == b.get()`.
 
 ```
 template<class T, class U>
-bool operator!=(T * a, intrusive_ptr<U> const & b) noexcept;
+  bool operator!=(T * a, intrusive_ptr<U> const & b) noexcept;
 ```
 
 [none]
@@ -364,7 +362,7 @@ Returns:: `a != b.get()`.
 
 ```
 template<class T, class U>
-bool operator<(intrusive_ptr<T> const & a, intrusive_ptr<U> const & b) noexcept;
+  bool operator<(intrusive_ptr<T> const & a, intrusive_ptr<U> const & b) noexcept;
 ```
 
 [none]
@@ -402,7 +400,7 @@ NOTE: Provided as an aid to generic programming. Used by `mem_fn`.
 
 ```
 template<class T, class U>
-intrusive_ptr<T> static_pointer_cast(intrusive_ptr<U> const & r) noexcept;
+  intrusive_ptr<T> static_pointer_cast(intrusive_ptr<U> const & r) noexcept;
 ```
 
 [none]
@@ -414,7 +412,7 @@ Returns:: `intrusive_ptr<T>(static_cast<T*>(r.get()))`.
 
 ```
 template<class T, class U>
-intrusive_ptr<T> const_pointer_cast(intrusive_ptr<U> const & r) noexcept;
+  intrusive_ptr<T> const_pointer_cast(intrusive_ptr<U> const & r) noexcept;
 ```
 
 [none]
@@ -426,7 +424,7 @@ Returns:: `intrusive_ptr<T>(const_cast<T*>(r.get()))`.
 
 ```
 template<class T, class U>
-intrusive_ptr<T> dynamic_pointer_cast(intrusive_ptr<U> const & r) noexcept;
+  intrusive_ptr<T> dynamic_pointer_cast(intrusive_ptr<U> const & r) noexcept;
 ```
 
 [none]
@@ -438,7 +436,7 @@ Returns:: `intrusive_ptr<T>(dynamic_cast<T*>(r.get()))`.
 
 ```
 template<class E, class T, class Y>
-std::basic_ostream<E, T> & operator<< (std::basic_ostream<E, T> & os,
+  std::basic_ostream<E, T> & operator<< (std::basic_ostream<E, T> & os,
     intrusive_ptr<Y> const & p);
 ```
 
