--- a/doc/smart_ptr/atomic_shared_ptr.adoc
+++ b/doc/smart_ptr/atomic_shared_ptr.adoc
@@ -36,7 +36,7 @@ namespace boost {
   public:
 
     atomic_shared_ptr() noexcept = default;
-    constexpr atomic_shared_ptr( shared_ptr<T> p ) noexcept;
+    atomic_shared_ptr( shared_ptr<T> p ) noexcept;
 
     atomic_shared_ptr& operator=( shared_ptr<T> r ) noexcept;
 
@@ -65,7 +65,7 @@ namespace boost {
 ## Members
 
 ```
-constexpr atomic_shared_ptr( shared_ptr<T> p ) noexcept;
+atomic_shared_ptr( shared_ptr<T> p ) noexcept;
 ```
 [none]
 * {blank}
