--- a/doc/smart_ptr/history.adoc
+++ b/doc/smart_ptr/history.adoc
@@ -110,4 +110,4 @@ Glen Fernandes rewrote `allocate_shared` and `make_shared` for arrays for a more
 
 Peter Dimov and Glen Fernandes rewrote the documentation in Asciidoc format.
 
-Peter Dimov added `atomic_shared_ptr`.
+Peter Dimov added `atomic_shared_ptr` and `local_shared_ptr`.
