--- a/doc/smart_ptr.adoc
+++ b/doc/smart_ptr.adoc
@@ -39,6 +39,8 @@ include::smart_ptr/intrusive_ref_counter.adoc[]
 
 include::smart_ptr/local_shared_ptr.adoc[]
 
+include::smart_ptr/make_local_shared.adoc[]
+
 include::smart_ptr/pointer_cast.adoc[]
 
 include::smart_ptr/pointer_to_other.adoc[]
